Fix text wrapping on small devices

--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,7 @@
   
   #BigText {
     font-size: 24pt;
+     word-wrap: anywhere;
   }
   
   #LittleText {
